# nanobot-webui

./: .gitignore  Dockerfile  Makefile  README.md  README_vi.md  README_zh.md  docker-compose.yml  pyproject.toml  setup.py  test_headers.py
docs/: RELEASE.md  mobile-design.md  nanobot-v0.1.5-webui-upgrade-plan.md
scripts/: docker-entrypoint.sh  test-release.sh
web/: package-lock.json  tsconfig.json  vite.config.ts
web/src/: index.css
web/src/components/chat/: ArtifactPreview.tsx  ChatInput.tsx  ChatWindow.tsx  MessageBubble.tsx
web/src/components/layout/: MobileBottomTabs.tsx  MobileTopBar.tsx  Sidebar.tsx
web/src/hooks/: useConfig.ts  useCron.ts  useProviders.ts  useSessions.ts
web/src/i18n/: index.ts
web/src/i18n/locales/: de.json  en.json  es.json  fr.json  ja.json  ko.json  pt.json  vi.json  zh-TW.json  zh.json
web/src/lib/: channelIcons.ts  ws.ts
web/src/pages/: Channels.tsx  Chat.tsx  CronJobs.tsx  Login.tsx  Settings.tsx  SystemConfig.tsx  Users.tsx
web/src/stores/: chatStore.ts
webui/: __main__.py  cli.py
webui/api/: channel_ext.py  gateway.py  models.py  provider_meta.py  server.py  users.py
webui/api/routes/: channels.py  config.py  cron.py  mcp.py  providers.py  sessions.py  skills.py  workspace.py  ws.py
webui/patches/: __init__.py  channels.py  config.py  exec_windows.py  mcp_dynamic.py  provider.py  session.py  skills.py  subagent.py
webui/utils/: webui_config.py
