[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nanobot-webui"
version = "0.2.8"
description = "Web management panel for nanobot"
readme = "README.md"
license = "MIT"
authors = [
    { name = "kangkang223", email = "chenwk.top@foxmail.com" }
]
keywords = ["nanobot", "webui", "ai", "agent"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
requires-python = ">=3.11"
dependencies = [
    "nanobot-ai==0.1.5.post1",
    "fastapi==0.135.3",
    "uvicorn[standard]>=0.31.1,<1.0.0",
    "PyJWT>=2.10.1,<3.0.0",
    "bcrypt>=4.1.1,<5.0.0",
    "python-multipart==0.0.26",
    "boto3==1.34.0",
    "typer>=0.20.0,<1.0.0",
    "qrcode[pil]==8.0.0",
]


[project.urls]
Homepage = "https://github.com/Good0007/nanobot-webui"
Repository = "https://github.com/Good0007/nanobot-webui"

[project.optional-dependencies]
dev = [
    "build",
    "twine",
    "httpx",
    "pytest",
    "pytest-asyncio",
]

[project.scripts]
nanobot = "webui.cli:run_nanobot"
webui = "webui.cli:run_webui"
nanobot-webui = "webui.cli:run_webui"

[tool.setuptools.packages.find]
where = ["."]
include = ["webui*"]

[tool.setuptools.package-data]
"webui" = ["web/dist/**/*", "web/dist/*"]
